--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,18 +1,15 @@
 <!-- Sidebar Header starts -->
 <div class="sidebar-header">
     <div class="logo clearfix">
-        <a [routerLink]="['/']" class="logo-text float-left">
-            <div class="logo-img">
-                <img [src]="logoUrl" />
-            </div>
-            <span class="text align-middle">APEX</span>
+        <a [routerLink]="['/']" class="logo-text ">
+            <span class="text align-middle">Nimali Tea</span>
         </a>
-        <a class="nav-toggle d-none d-sm-none d-md-none d-lg-block" id="sidebarToggle" href="javascript:;">
+        <!-- <a class="nav-toggle d-none d-sm-none d-md-none d-lg-block" id="sidebarToggle" href="javascript:;">
             <i #toggleIcon appSidebarToggle class="ft-toggle-right toggle-icon" data-toggle="expanded"></i>
         </a>
         <a class="nav-close d-block d-md-block d-lg-none d-xl-none" id="sidebarClose" href="javascript:;">
             <i class="ft-x"></i>
-        </a>
+        </a> -->
     </div>
 </div>
 <!-- Sidebar Header Ends -->
@@ -21,6 +18,7 @@
 <div class="sidebar-content"  [perfectScrollbar]>
     <div class="nav-container">
         <ul class="navigation" appSidebarList>
+            
             <!-- First level menu -->
              <li appSidebarlink level="{{depth + 1}}" (toggleEmit)="handleToggle($event)" (click)="toggleSlideInOut()" [routePath]="menuItem.path" [classes]="menuItem.class" [title]="menuItem.title"  [parent]="" *ngFor="let menuItem of menuItems"   [ngClass]="{'has-sub': menuItem.class === 'has-sub' ? true: false, 'open': activeTitles.includes(menuItem.title) && !nav_collapsed_open ? true : false, 'nav-collapsed-open': nav_collapsed_open && activeTitles.includes(menuItem.title)}" [routerLinkActive]="menuItem.submenu.length != 0 ? '' : 'active'"
                 [routerLinkActiveOptions]="{exact: true}">
